--- a/gb/19/12/26/n11746423.md
+++ b/gb/19/12/26/n11746423.md
@@ -1,50 +1,61 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/osnkrv285/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/osnkrv285/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qblrme335/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qblrme335/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qblrme335/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qblrme335/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>选情告急？彰化立委柯呈枋坚持干净选举</h2>
-<img width="600" src="http://i.epochtimes.com/assets/uploads/2019/12/8feb4ed9e95e81336f0b5794e4cd17c7-600x400.jpg" />
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/12/8feb4ed9e95e81336f0b5794e4cd17c7-600x400.jpg" />
 <h6>彰化县第一选区立委候选人柯呈枋26日召开记者会坚持干净选举。（柯呈枋服务处提供）
 </h6>
 <hr>
-<p>【大纪元2019年12月26日讯】（大纪元记者谢五男台湾<a href="https://github.com/osnkrv285/djy/blob/master/gb/tag/%E5%BD%B0%E5%8C%96.md">彰化</a>报导）彰化第一选区立委<a href="https://github.com/osnkrv285/djy/blob/master/gb/tag/%E6%9F%AF%E5%91%88%E6%9E%8B.md">柯呈枋</a>，连日来横遭各种抹黑，柯总部不再姑息，伸港家乡父老与支持者也看不下去，一起出席柯总部26日记者会，坚持干净选举的柯呈枋表示，最担心对手在连串抹黑之后的栽赃，趁机收买人头穿上他的团队制服去买票，希望所有乡亲勇于检举，还给国家一个干净的选举环境，还给选民一个理性的选择空间。</p>
-<p><a href="https://github.com/osnkrv285/djy/blob/master/gb/tag/%E6%9F%AF%E5%91%88%E6%9E%8B.md">柯呈枋</a>并出示一张94年1月21日他在法务部科长任内，获当时的部长陈定南颁发年度绩优人员奖的照片。柯呈枋说，陈定南耿介正直的印象深植人心，对他的启发良多，他也一直以陈定南为榜样；自己出身普通家庭，一年前还没当立委，就是个公务员，以他这样的条件，相信所有人都不会相信他有能力去从事对手所称的任何一种奥步。</p>
+<p>【大纪元2019年12月26日讯】（大纪元记者谢五男台湾<ahref="https://github.com/qblrme335/djy/blob/master/gb/tag/%E5%BD%B0%E5%8C%96.md#1">彰化</a>报导）彰化第一选区立委<ahref="https://github.com/qblrme335/djy/blob/master/gb/tag/%E6%9F%AF%E5%91%88%E6%9E%8B.md#1">柯呈枋</a>，连日来横遭各种抹黑，柯总部不再姑息，伸港家乡父老与支持者也看不下去，一起出席柯总部26日记者会，坚持干净选举的柯呈枋表示，最担心对手在连串抹黑之后的栽赃，趁机收买人头穿上他的团队制服去买票，希望所有乡亲勇于检举，还给国家一个干净的选举环境，还给选民一个理性的选择空间。</p>
+<p><ahref="https://github.com/qblrme335/djy/blob/master/gb/tag/%E6%9F%AF%E5%91%88%E6%9E%8B.md#1">柯呈枋</a>并出示一张94年1月21日他在法务部科长任内，获当时的部长陈定南颁发年度绩优人员奖的照片。柯呈枋说，陈定南耿介正直的印象深植人心，对他的启发良多，他也一直以陈定南为榜样；自己出身普通家庭，一年前还没当立委，就是个公务员，以他这样的条件，相信所有人都不会相信他有能力去从事对手所称的任何一种奥步。</p>
 <p>柯总部记者会除了伸港乡亲带来当地盛产的大蒜预祝他高票当选，总部主委老议长谢式谷与选区六乡镇的后援会长都到齐力挺。柯呈枋的同公族伯母李绢美强调，柯家自打监委柯明谋参选以来，都是清清白白，她看着柯呈枋从小到大一路都很优秀，请大家相信柯呈枋的人格与学识，他一定清白参选到底。</p>
 <p>责任编辑：王愉悦</p>
 
 <hr>
 
-#### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/19/12/26/n11746423.htm">选情告急？彰化立委柯呈枋坚持干净选举</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/12/18/n11729966.htm">立委号次抽签  彰县蓝绿候选人各显风骚</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/26/n11613765.htm">中正大学生日快乐 10位杰出校友迎创校30年</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/25/n11612179.htm">台交通部长：国家需要机场政策</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/9/n11509003.htm">不谙工厂管理新法  立委邀请官员座谈会</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/6/n11502963.htm">渔民期盼30年的彰化渔港 却被质疑为“空港”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/25/n11344660.htm">中央考察2020台湾灯会  中市府要求尽速定案</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11744649.htm">英预言家：2020年中国发生革命 川普连任</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743411.htm">中共尽失人心 反习势力与保习派激战</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11745443.htm">摩托车横穿李克强车队 险酿意外</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11744554.htm">袜子里藏生物样本回国 中国男美国机场被捕</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733387.htm">占星解析薄熙来死亡消息是否属实</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11725356.htm">为什么说“吃过冬至汤圆长一岁”？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733028.htm">以世运占星学解析中共政权的出生盘</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/13/n11721189.htm">天上人间冬至日  传统节俗暖人心</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11744287.htm">侯佩岑婚后8年首晒全家福 温馨庆圣诞</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743740.htm">高圆圆女儿受宠爱 赵又廷父母为孙女制圣诞礼</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11744661.htm">Wendy彩排中骨折 Red Velvet后续行程未定</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11744605.htm">谢金燕桃园跨年 大阵仗不计成本　</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743343.htm">冯小刚直播卖电影票 兴奋晒折后138元靴子</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/12/n11718472.htm">【三国英雄】之七：董卓之死（文字版）</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11741034.htm">【新闻看点】习访澳魂系香港 3真相北京心凉</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743683.htm">【热点互动】美国防法案 暗制中共 明挺台湾</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743273.htm">中国多地禁过圣诞 藉历史宣传“仇恨”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11741624.htm">【翻墙必看】北大教授：七常委先公示财产</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11741030.htm">大陆课外培训机构倒闭潮 今年1.2万家关停</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/19/6/25/n11344660.md#1">中央考察2020台湾灯会 中市府要求尽速定案</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/19/9/6/n11502963.md#1">渔民期盼30年的彰化渔港 却被质疑为“空港”</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/19/9/9/n11509003.md#1">不谙工厂管理新法  立委邀请官员座谈会</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/19/10/25/n11612179.md#1">台交通部长：国家需要机场政策</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/19/10/26/n11613765.md#1">中正大学生日快乐 10位杰出校友迎创校30年</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/19/12/18/n11729966.md#1">立委号次抽签  彰县蓝绿候选人各显风骚</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/23/n12830085.md#1">曲冰古道维修将完工 确保安全促进观光发展</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/23/n12829760.md#1">口罩科技公司提供职缺 嘉惠彰县退除役官兵</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/23/n12829676.md#1">防范病毒肠胃炎 彰化荣家快闪宣导</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/23/n12829669.md#1">旱象严峻 彰县长王惠美：农业用水不足七成</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/osnkrv285/djy/blob/master/gb/19/12/26/n11746423.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/osnkrv285/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/osnkrv285/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/osnkrv285/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/14/n10715065.md#1" target="_blank">古玉文：公安局长卧底校长 百名少年惨成右派</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/11/n7543764.md#1" target="_blank">军转干部感恩法轮大法给了第二次生命</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/16/n12815794.md#1">【未解之谜】缅甸奇僧亲历 揭密生死轮回</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/13/n12809133.md#1">东方的辛德勒—约翰?拉贝</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/14/n12810364.md#1">西方轮回研究漫笔：转世前的安排和约定</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/20/4/3/n11999735.md#1">华盛顿将军系列故事：打马少年 入画江山? ?</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/18/n12820656.md#1">【未解之谜】临死体验后发生的奇迹</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/22/n12828962.md#1">【横河直播】反亚裔仇恨集会 谁在打种族牌</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/22/n12827737.md#1">【新闻大家谈】中共国师挖坑 拜登叫习勿信宣传</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/22/n12826726.md#1">【拍案惊奇】北京画外交红线 川普建社媒平台</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/21/n12825808.md#1">蓬佩奥谈杨洁篪发飙：我会这样击其痛点</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/20/n12824695.md#1">美议员促扩大制裁 阻中芯国际购DUV光刻机</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/21/n12826026.md#1">整治冥纸冥币  中共“新破四旧”运动遭轰</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/22/n12827069.md#1">从不抽烟 台前主播萧彤雯罹肺腺癌零期</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/21/n12826073.md#1">感佩台湾垃圾分类 杜汶泽：爱一地犹如爱一人</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/21/n12825025.md#1">《餐车》回到原点 黄秋生因KID一句话走心</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/20/n12823452.md#1">《查克史奈德之正义联盟》影评：DC的史诗巨作！</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/22/n12827709.md#1">罗时丰大港开唱：纵使过气，也不要丧气</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/20/n12824338.md#1">鲑鱼5大营养补脑、护心血管 3类人不宜多吃</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/20/n12824292.md#1">【重播】变种病毒感染比例大增 第四波疫情恐将至？</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/21/n12825217.md#1">西澳70头虎鲸围攻16米长蓝鲸 搏斗4小时</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/22/n12827458.md#1">心情高低起伏 男子遗失百万美元彩券后寻回</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/22/n12826876.md#1">iPhone手机在湖底泡水半年 竟然还能用</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/qblrme335/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/qblrme335/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/12/26/n11746423.htm">选情告急？彰化立委柯呈枋坚持干净选举</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/qblrme335/djy/blob/master/gb/19/12/26/n11746423.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qblrme335/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qblrme335/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qblrme335/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
